Se pasan los archivos a carpetas

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi Página Web - Josué Sánchez</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
@@ -15,7 +15,7 @@
 
     <main>
         <section>
-            <img src="webrtc.png" alt="Imagen de react" class="imagen-react">
+            <img src="img/webrtc.png" alt="Imagen de react" class="imagen-react">
             <h2>¿Qué es WebRTC?</h2>
             <p class="descripcion">WebRTC, es un proyecto de código abierto – promovido por Google Chrome, 
                 Mozilla Firefox y otros – que permite comunicaciones en tiempo real sin plug-ins 
@@ -30,7 +30,7 @@
         </section>
 
         <section>
-            <img src="socketio.png" alt="Imagen de socketio" class="imagen-socketio">
+            <img src="img/socketio.png" alt="Imagen de socketio" class="imagen-socketio">
             <h2>¿Qué es Socket.io?</h2>
             <p class="descripcion">Socket.IO es una biblioteca de JavaScript para crear aplicaciones web en tiempo real 
                 basadas en eventos. Permite la comunicación bidireccional entre clientes y servidores 
@@ -56,6 +56,6 @@
     <p>&copy; 2025 Sitio Web realizado por Josué David Sánchez López.</p>
     </footer>
     
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
